Trying a new mysql cookbook version

--- a/chef/cookbooks/mysql/templates/default/my.cnf.erb
+++ b/chef/cookbooks/mysql/templates/default/my.cnf.erb
@@ -26,14 +26,11 @@ pid-file                       = <%= @pid_file %>
 <% if @socket_file %>
 socket                         = <%= @socket_file %>
 <% end %>
-<% if @config.bind_address %>
-bind-address                   = <%= @config.bind_address %>
-<% end %>
 <% if @config.port %>
 port                           = <%= @config.port %>
 <% end %>
-<% if @data_dir %>
-datadir                        = <%= @data_dir %>
+<% if @config.parsed_data_dir %>
+datadir                        = <%= @config.parsed_data_dir %>
 <% end %>
 <% if @tmp_dir %>
 tmpdir                         = <%= @tmp_dir %>
