--- a/chef/cookbooks/my-chef-server/templates/default/chef-server.erb
+++ b/chef/cookbooks/my-chef-server/templates/default/chef-server.erb
@@ -1,2 +1,3 @@
 server_name = "<%= node['hostname'] %>"
-api_fqdn <%= node['hostname'] %>
+api_fqdn "<%= node['hostname'] %>"
+topology "standalone"
